Add Image&Gif of semilattice.

--- a/Forest_Document/Manual/index.html
+++ b/Forest_Document/Manual/index.html
@@ -334,13 +334,20 @@ th {
   <div class="belt-blue">
     <p>$ make forest</p>
   </div>
+  <div class="belt-blue">
+    <p>$ make semilattice</p>
+  </div>
   <p>以下に実行例を示す。なお、初期の画面では見切れてしまったので整理終了後の様子は画像で示す</p>
   <p>$ make tree</p>
-  <td class="center-small"><a href="image/tree.gif"><img class="borderless" src="image/tree.gif" width="408" height="319" alt="semilattice"></a></td>
+  <td class="center-small"><a href="image/tree.gif"><img class="borderless" src="image/tree.gif" width="408" height="319" alt="tree"></a></td>
   <td class="center-small"><a href="image/tree.png"><img class="borderless" src="image/tree.png" width="408" height="319"></a></td>
   <p>$ make forest</p>
-  <td class="center-small"><a href="image/forest.gif"><img class="borderless" src="image/forest.gif" width="408" height="319" alt="semilattice"></a></td>
+  <td class="center-small"><a href="image/forest.gif"><img class="borderless" src="image/forest.gif" width="408" height="319" alt="forest"></a></td>
   <td class="center-small"><a href="image/forest.png"><img class="borderless" src="image/forest.png" width="408" height="319"></a></td>
+  <p>$ make semilattice</p>
+  <td class="center-small"><a href="image/semilattice.gif"><img class="borderless" src="image/semilattice.gif" width="408" height="319" alt="semilattice"></a></td>
+  <td class="center-small"><a href="image/semilattice.png"><img class="borderless" src="image/semilattice.png" width="408" height="319"></a></td>
+
 </div>
 
 <hr>
